feature[ats_ATS286643]: HLR - Implement Types Versioning
Change-Id: I9d68d8b17295bbb6986917db495811cc6eae25cc